cabal-version:      2.4
name:               advent-of-code2022
version:            0.1.0.0
author:             geraldserafin
maintainer:         serafingerald@protonmail.com
extra-source-files: CHANGELOG.md

library
    exposed-modules:  AOC, Parsers, Day1, Day2, Day3, Day4, 
                      Day5, Day6, Day7, Day8, Day9, Day10
    build-depends:    base ^>=4.16.1.0, split, MissingH, containers, parsec
    hs-source-dirs:   src
    default-language: Haskell2010
